# generatox

./: Cargo.toml  justfile
proc/: Cargo.toml
proc/src/: lib.rs  parse.rs  transform.rs
proc/tests/: test.rs
src/: lib.rs  wrapper.rs
tests/: test.rs
