[package]
name = "generatox"
description = "Stable generators for Rust"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
nightly = ["generatox-proc/nightly"]

[dependencies]
cfg-if = "1.0.0"
generatox-proc = { version = "0.1.0", path = "proc" }
pin-project = "1.1.3"

[workspace]
members = ["proc"]
