[package]
name = "generatox-proc"
description = "Stable generators for Rust"
license = "MIT"
version = "0.1.2"
edition = "2021"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
cfg-if = "1.0.0"
derive-syn-parse = "0.1.5"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "extra-traits", "fold"] }
